--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ python-keystoneclient==3.22.0
 keystoneauth1==3.14.0
 # error with 5.x (ConstructorError: could not determine a constructor for the tag '!record')
 PyYAML==4.2b4
+prometheus_client==0.11.0
